--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,6 +42,19 @@ jobs:
           name: "print world"
           command: "echo Worldddd!"
 
+  print-my-name:
+    # Specify the execution environment. You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
+    # See: https://circleci.com/docs/2.0/configuration-reference/#docker-machine-macos-windows-executor
+    docker:
+      - image: circleci/node:13.8.0
+    # Add steps to the job
+    # See: https://circleci.com/docs/2.0/configuration-reference/#steps
+    steps:
+      - checkout
+      - run:
+          name: "print my name"
+          command: "printenv MY_NAME"
+
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
 workflows:
@@ -54,3 +67,4 @@ workflows:
       - print-world:
           requires:
             - print-hello
+      - print-my-name
