--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -55,16 +55,57 @@ jobs:
           name: "print my name"
           command: "echo $MY_NAME"
 
+  save_hello_world_output:
+    # Specify the execution environment. You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
+    # See: https://circleci.com/docs/2.0/configuration-reference/#docker-machine-macos-windows-executor
+    docker:
+      - image: circleci/node:13.8.0
+    # Add steps to the job
+    # See: https://circleci.com/docs/2.0/configuration-reference/#steps
+    steps:
+      - checkout
+      - run:
+          name: "print hello world in txt file "
+          command: "echo ' Hello world ' > ~/output.txt"
+       - persist_to_workspace:
+          root: ~/
+          paths:
+            - output.txt
+
+  print_output_file:
+  # Specify the execution environment. You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
+    # See: https://circleci.com/docs/2.0/configuration-reference/#docker-machine-macos-windows-executor
+    docker:
+      - image: circleci/node:13.8.0
+    # Add steps to the job
+    # See: https://circleci.com/docs/2.0/configuration-reference/#steps
+    steps:
+      - checkout
+      - attach_workspace:
+          at: ~/
+
+
+
+
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
 workflows:
   # say-hello-workflow:
   #   jobs:
   #     - say-hello
+  # hello-world-workflow:
+  #   jobs:
+  #     - print-hello
+  #     - print-world:
+  #         requires:
+  #           - print-hello
+  #     - print-my-name
+
   hello-world-workflow:
     jobs:
-      - print-hello
-      - print-world:
+      - save_hello_world_output
+      - print_output_file:
           requires:
-            - print-hello
-      - print-my-name
+            - save_hello_world_output
+
+
