--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -83,7 +83,9 @@ jobs:
       - checkout
       - attach_workspace:
           at: ~/
-      - run: -cat ~/output.txt
+      - run:
+          name: "print file"
+          command: "cat ~/output.txt"
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
