--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,6 +2,11 @@
 # See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
 
+commands:
+  print_pipeline_id:
+    description: "prints the Circle CI Workflow ID"
+     steps:
+      - run: echo "$CIRCLE_WORKFLOW_ID"
 # Define a job to be invoked later in a workflow.
 # See: https://circleci.com/docs/2.0/configuration-reference/#jobs
 jobs:
@@ -87,6 +92,15 @@ jobs:
           name: "print file"
           command: "cat ~/output.txt"
 
+  work_flow_id:
+    docker:
+      - image: circleci/node:13.8.0
+    # Add steps to the job
+    # See: https://circleci.com/docs/2.0/configuration-reference/#steps
+    steps:
+      - print_pipeline_id
+
+
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
 workflows:
@@ -101,9 +115,13 @@ workflows:
   #           - print-hello
   #     - print-my-name
 
-  hello-world-workflow:
+  # hello-world-workflow:
+  #   jobs:
+  #     - save_hello_world_output
+  #     - print_output_file:
+  #         requires:
+  #           - save_hello_world_output
+  
+  work_flow_id_workflow:
     jobs:
-      - save_hello_world_output
-      - print_output_file:
-          requires:
-            - save_hello_world_output
+      - work_flow_id
